--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!-- Default -->
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -7,4 +9,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!--  My Colors  -->
+    <color name="primaryColor">#ffab91</color>
+    <color name="primaryLightColor">#ffddc1</color>
+    <color name="primaryDarkColor">#c97b63</color>
+
+    <color name="secondaryColor">#ffe082</color>
+    <color name="secondaryLightColor">#ffffb3</color>
+    <color name="secondaryDarkColor">#caae53</color>
+
 </resources>
